# tennis-oma

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
app/pages/: 1_Data_Overview.py
configs/: base.yaml  cv.yaml  models.yaml
data/processed/: backtest_results.csv  devlog.md  features.parquet  metrics_eval_since.csv  metrics_folds.csv  metrics_overall.csv  oof_valid.csv  stacker.joblib
data/processed/asof=2017-12-31/: dim_player.parquet  dim_tournament.parquet
data/raw/synth/: synth_matches.csv
scripts/: run_small_backtest.sh
src/tennis/: cli.py  config.py
src/tennis/data/: ingest_matches.py  ingest_sackmann.py  ingest_tcb.py  ingest_tml.py  merge_sources.py  normalize.py  ratings.py  schema.py  validate.py  xref.py
src/tennis/ensemble/: stacker.py
src/tennis/eval/: backtest.py  metrics.py
src/tennis/features/: builders.py
src/tennis/models/: calibrate.py  elo.py  gbdt_lgbm.py  registry.py
src/tennis/utils/: leakage_sentry.py  logging.py  time_split.py
tests/: test_determinism.py  test_merge_smoke.py  test_time_split.py
